--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "antd": "^3.24.1",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
+    "eslint-plugin-react-hooks": "^0.0.0-f6b8d31a7",
+    "firebase": "^7.2.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.10.2",
@@ -14,6 +17,7 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   },
